[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/exploding_boss_sarcophagus.png" type="Texture" id=1]
[ext_resource path="res://BossSarcophagus.gd" type="Script" id=2]
[ext_resource path="res://Sprites/SacParts/part1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/SacParts/part4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SacParts/part2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SacParts/part5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SacParts/part3.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "Explode",
"speed": 1.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17.25, 0.5 )

[sub_resource type="CircleShape2D" id=8]
radius = 12.0416

[node name="BossSarcophagus" type="StaticBody2D"]
position = Vector2( 313, 103 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Explode"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.25, 32.5 )
shape = SubResource( 7 )

[node name="part1" type="RigidBody2D" parent="."]
position = Vector2( 0, -19 )
z_index = 10
collision_layer = 2048
collision_mask = 2048

[node name="Sprite" type="Sprite" parent="part1"]
position = Vector2( 1, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="part1"]
shape = SubResource( 8 )

[node name="part2" type="RigidBody2D" parent="."]
position = Vector2( 8, 4 )
z_index = 10
collision_layer = 2048
collision_mask = 2048

[node name="Sprite" type="Sprite" parent="part2"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="part2"]
shape = SubResource( 8 )

[node name="part3" type="RigidBody2D" parent="."]
position = Vector2( -8, 3 )
z_index = 10
collision_layer = 2048
collision_mask = 2048

[node name="Sprite" type="Sprite" parent="part3"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="part3"]
shape = SubResource( 8 )

[node name="part4" type="RigidBody2D" parent="."]
position = Vector2( 7, 22 )
z_index = 10
collision_layer = 2048
collision_mask = 2048

[node name="Sprite" type="Sprite" parent="part4"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="part4"]
shape = SubResource( 8 )

[node name="part5" type="RigidBody2D" parent="."]
position = Vector2( -9, 22 )
z_index = 10
collision_layer = 2048
collision_mask = 2048

[node name="Sprite" type="Sprite" parent="part5"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="part5"]
shape = SubResource( 8 )

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
